--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -321,3 +321,29 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   transform: translateY(1px);
 }
+.tickets {
+  padding: 1rem;
+}
+
+.badge {
+  background-color: #22c55e;
+  color: white;
+  font-size: 0.75rem;
+  font-weight: bold;
+  padding: 2px 8px;
+  border-radius: 999px;
+  display: inline-block;
+  margin-top: 1rem;
+}
+
+.ticket {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-left: 0.5rem;
+}
+.tickets-grid {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 10px;
+  padding: 10px;
+}
