--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,6 +4,9 @@
   max-width: 400px;
   margin: auto;
   margin-top: 20px;
+    height: calc(100vh - 60px); // ajusta el alto según la altura de <app-menu-bottom>
+  overflow-y: auto;
+  padding-bottom: 100px; // espacio para que no tape el menú inferior
 }
 
 
@@ -346,4 +349,38 @@
   grid-template-columns: repeat(5, auto);
   gap: 10px;
   padding: 10px;
+}
+.titulo-cliente {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #444;
+}
+.overlay-loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 6px solid #ccc;
+  border-top-color: #2196f3;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
