--- a/src/app/dashboard/search-number/search-number.component.html
+++ b/src/app/dashboard/search-number/search-number.component.html
@@ -1,7 +1,7 @@
 <div class="search-container">
   <input
     type="text"
-    placeholder="Buscar por teléfono..."
+    placeholder="Buscar por teléfono"
     [(ngModel)]="telefono"
     (ngModelChange)="buscarPorTelefono()"
   />
