--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,9 +5,10 @@
  <div class="header">
   <div class="top-row">
     <div class="user">
-      <i class="fa-solid fa-user-circle"></i>
-      Michi666
-    </div>
+  <i class="fa-solid fa-user-circle"></i>
+  {{ nombreUsuario }}
+</div>
+
 
 <!-- Botón del engrane -->
 <button class="icon-btn" (click)="toggleMenu()">
