--- a/src/app/menu-bottom/menu-bottom.component.html
+++ b/src/app/menu-bottom/menu-bottom.component.html
@@ -1,17 +1,20 @@
 <div class="menu-bottom">
-  <button class="menu-btn">
+  <button class="menu-btn"(click)="inicio()">
     <i class="fa-solid fa-house"></i>
     <span>Inicio</span>
   </button>
-  <button class="menu-btn">
+
+  <button class="menu-btn" (click)="irAHome()">
     <i class="fa-solid fa-plus"></i>
-    <span>Nueva Rifa</span>
+    <span>Rifas</span>
   </button>
+
   <button class="menu-btn">
     <i class="fa-solid fa-chart-bar"></i>
     <span>Reportes</span>
   </button>
-  <button class="menu-btn">
+
+  <button class="menu-btn" (click)="emitirAbrirMenu()">
     <i class="fa-solid fa-cog"></i>
     <span>Config</span>
   </button>
