--- a/src/app/home/components/next-raffle/next-raffle.component.scss
+++ b/src/app/home/components/next-raffle/next-raffle.component.scss
@@ -25,3 +25,9 @@
   font-weight: bold;
   color: #111827;
 }
+.card {
+  background-color: #f8fafc; // slate-50, un gris azul muy claro
+  border-radius: 1rem;
+  padding: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.03);
+}
