--- a/src/app/home/components/top-buyers/top-buyers.component.html
+++ b/src/app/home/components/top-buyers/top-buyers.component.html
@@ -1,4 +1,4 @@
-<div class="top-card purple">
+<div class="top-card purple card"  >
   <div class="icon-label">
     <span class="icon">👥</span>
     <div class="text">
