--- a/src/app/home/components/top-sellers/top-sellers.component.html
+++ b/src/app/home/components/top-sellers/top-sellers.component.html
@@ -1,4 +1,4 @@
-<div class="top-card blue">
+<div class="top-card blue card">
   <div class="icon-label">
     <span class="icon">👤</span>
     <div class="text">
