--- a/src/app/home/components/sales-progress/sales-progress.component.html
+++ b/src/app/home/components/sales-progress/sales-progress.component.html
@@ -1,4 +1,4 @@
-<div class="sales-progress-card" *ngIf="progress.length > 0">
+<div class="card sales-progress-card " *ngIf="progress.length > 0">
   <h3>Progreso de ventas</h3>
   <div class="progress-bar">
     <div class="progress-fill" [style.width.%]="progress[progress.length - 1]">
