--- a/src/app/home/components/total-raffles/total-raffles.component.scss
+++ b/src/app/home/components/total-raffles/total-raffles.component.scss
@@ -11,7 +11,7 @@
 .title-wrapper {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 100%; // <-- cambia esto de 70% a 100%
   align-items: center;
 }
 
