--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,11 @@ body {
   opacity: 1;
   transform: translateX(-50%) translateY(-10px);
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: #f1f5f9; // azul claro global
+  overflow-x: hidden; // evita scroll horizontal raro
+}
